finished with skeleton grid layout

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
 </main>
 
 <!--Footer-->
-<footer class="twelve columns container">
-<nav class="three columns offset-by-three" align="left">
+<footer class="twelve columns">
+<nav class="four columns offset-by-two" align="left">
    <ul>
            <li><a href="">About Us</a></li>
            <li><a href="">Cleaning Care/Instructions</a></li> 
@@ -142,7 +142,7 @@
            <li><a href="">Sizing Guide</a></li> 
          </ul>
        </nav>
-<nav class="three columns container" align="left">
+<nav class="four columns" align="left">
    <ul>
            <li><a href="">FAQ</a></li> 
            <li><a href="">Return Policy</a></li> 
@@ -151,11 +151,11 @@
          </ul>
        </nav>
     
-<div class="three columns container" align="right">
+<div class="three columns" align="right">
 <a href="index.html" class="site-logo"><img src="images/logo-white.png" alt="Rapsberry Suede"/></a>
 </div>
     
-<div class="twelve columns container" align="center">
+<div class="twelve columns" align="center">
   <p class="copyright-block">&copy; 2015. <strong>Raspberry Suede</strong> | raspberrysuede.com</p>
 </div>
 
