updated some styles and fixed navigation

--- a/product-description.html
+++ b/product-description.html
@@ -105,7 +105,7 @@
     <header class="twelve columns hero-2">
 
     <!--Header Navigation-->
-     <a class="header-logo" href="index.html"><img src="images/logo.png" alt="Rapsberry Suede"/></a>
+     <a class="header-logo three columns" href="index.html"><img src="images/logo.png" alt="Rapsberry Suede"/></a>
 
      <ul class="login">
          <li><a href="login.html">Login</a></li>
@@ -118,7 +118,7 @@
 <main role="main">
     
 <!--Horizontal Navigation-->  
-    <nav class="horizontal-nav twelve columns">
+    <nav class="horizontal-nav twelve columns" align="center">
         <ul>
             <li><a href="women.html">Women</a></li>
             <li><a href="men.html">Men</a></li>
