--- a/women.html
+++ b/women.html
@@ -24,7 +24,7 @@
     <header class="twelve columns hero-4">
 
     <!--Header Navigation-->
-     <a class="header-logo" href="index.html"><img src="images/logo.png" alt="Rapsberry Suede"/></a>
+     <a class="header-logo three columns" href="index.html"><img src="images/logo.png" alt="Rapsberry Suede"/></a>
 
      <ul class="login">
          <li><a href="login.html">Login</a></li>
@@ -37,7 +37,7 @@
 <main role="main">
     
 <!--Horizontal Navigation-->  
-    <nav class="horizontal-nav twelve columns">
+    <nav class="horizontal-nav twelve columns" align="center">
         <ul>
             <li><a href="women.html">Women</a></li>
             <li><a href="men.html">Men</a></li>
