--- a/product-description-reviews.html
+++ b/product-description-reviews.html
@@ -129,11 +129,11 @@
      <nav class="horizontal-nav twelve columns" align="center">
         <ul>
             <li><a href="women.html">Women</a></li>
-            <li><a href="men.html">Men</a></li>
-            <li><a href="children.html">Children</a></li>
-            <li><a href="gitcards.html">Gift Cards</a></li>
-            <li><a href="sale.html">Sale</a></li>
-            <li><a href="about.html">Who We Are</a></li>
+            <li><a href="#">Men</a></li>
+            <li><a href="#">Children</a></li>
+            <li><a href="#">Gift Cards</a></li>
+            <li><a href="#">Sale</a></li>
+            <li><a href="#">Who We Are</a></li>
         </ul>
     </nav>
 <!--Slideshow-->
